src/sftp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftp
  namespace: sftp
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: upload.cjbarroso.com
      http:
        paths:
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: sftp
                port:
                  name: http
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: sftp
                port:
                  name: http
